fixed textarea size on small screen

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -16,7 +16,11 @@
     &__textarea {
         margin: 5px 0;
         padding: 10px;
-        height: 200px;
+        height: 140px;
+
+        @media (min-height: 720px) {
+            height: 200px;
+        }
     }
 
     &__button {
